# frustum

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  PHILOSOPHY.md  README.md  audit_cube.json
crates/frustum-core/: Cargo.toml
crates/frustum-core/src/: camera.rs  geometry.rs  lib.rs  lighting.rs  marching_cubes.rs  materials.rs  scene.rs
crates/frustum-render/: Cargo.toml
crates/frustum-render/examples/: audit.rs  axes.rs  cube.rs  extensions.rs  lighting.rs  marching_cubes.rs  materials.rs  primitives.rs  triangle.rs
crates/frustum-render/src/: audit.rs  font.rs  invariants.rs  lib.rs  metrics.rs  primitives.rs
crates/frustum-render/src/shaders/: basic.wgsl  line.wgsl  point.wgsl  text.wgsl
crates/frustum-render/tests/: golden_tests.rs  renderer_tests.rs
feature-planner/: 001-scene-camera.md  002-geometry-primitives.md  003-marching-cubes.md  004-materials-color.md  005-axes.md  006-lighting.md  007-golden-invariants.md  007-renderer-contract.md  007-renderer-tests.md  008-text-rendering.md  009-extensions.md  010-implementation-notes.md  AUDIT-001-005.md  SCHEMA-INVENTORY.md
schema/: scene.schema.json
