[package]
name = "frustum-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core scene model and geometry primitives for Frustum GPU rendering"
keywords = ["3d", "graphics", "visualization", "scientific", "rendering"]
categories = ["graphics", "science", "rendering"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
glam = "0.29"
