[package]
name = "frustum-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU rendering backend for Frustum using wgpu"

[dependencies]
frustum-core = { path = "../frustum-core" }
wgpu = "24"
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"
glam = "0.29"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
